// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. before resolving image 1`] = `
<ProgressiveImage
  placeholder="small.jpg"
  src="origin.jpg"
>
  <Img
    image="small.jpg"
    isLoaded={false}
    placeholder="small.jpg"
    src="origin.jpg"
  >
    <styled.div
      isLoaded={false}
      placeholder="small.jpg"
      src="origin.jpg"
      style={
        Object {
          "backgroundImage": "url(\\"small.jpg\\"",
        }
      }
    >
      <div
        className="sc-bdVaJa lpfHmJ"
        placeholder="small.jpg"
        src="origin.jpg"
        style={
          Object {
            "backgroundImage": "url(\\"small.jpg\\"",
          }
        }
      />
    </styled.div>
  </Img>
</ProgressiveImage>
`;

exports[`2. after resolving image 1`] = `
<ProgressiveImage
  placeholder="small.jpg"
  src="origin.jpg"
>
  <Img
    image="origin.jpg"
    isLoaded={true}
    placeholder="small.jpg"
    src="origin.jpg"
  >
    <styled.div
      isLoaded={true}
      placeholder="small.jpg"
      src="origin.jpg"
      style={
        Object {
          "backgroundImage": "url(\\"origin.jpg\\"",
        }
      }
    >
      <div
        className="sc-bdVaJa eAwpDA"
        placeholder="small.jpg"
        src="origin.jpg"
        style={
          Object {
            "backgroundImage": "url(\\"origin.jpg\\"",
          }
        }
      />
    </styled.div>
  </Img>
</ProgressiveImage>
`;
